--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/core": "^21.1.0",
     "@angular/common": "^21.1.0",
+    "@angular/forms": "^21.1.3",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
