--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/compiler": "^21.1.0",
-    "@angular/platform-browser": "^21.1.0",
-    "@angular/core": "^21.1.0",
-    "@angular/common": "^21.1.0",
-    "@angular/forms": "^21.1.3",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.3",
+    "@angular/platform-browser": "^21.1.0",
+    "rxjs": "^7.8.2",
+    "sweetalert2": "^11.26.18",
     "tailwindcss": "latest"
   },
   "devDependencies": {
