--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.3",
     "@angular/platform-browser": "^21.1.0",
+    "pdfmake": "^0.3.5",
     "rxjs": "^7.8.2",
     "sweetalert2": "^11.26.18",
     "tailwindcss": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/pdfmake": "^0.3.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
