--- a/angular.json
+++ b/angular.json
@@ -12,6 +12,11 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "sweetalert2",
+              "pdfmake/build/pdfmake",
+              "pdfmake/build/vfs_fonts"
+            ],
             "outputPath": {
               "base": "./dist",
               "browser": "."
